--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,12 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
-  {% include disqus.html %}
+  <script src="https://utteranc.es/client.js"
+        repo="jisotalo/jisotalo.github.io"
+        issue-term="pathname"
+        label="comment"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 </article>
