--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/projects">Projects &amp; stuff</a>
+            <a href="{{ site.baseurl }}/projects/">Projects &amp; stuff</a>
             <a href="https://github.com/jisotalo">GitHub</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about/">About</a>
           </nav>
         </header>
       </div>
