--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -8,6 +8,8 @@
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
+  tab-size:2;
+  font-size:0.8em;
 }
 
 code {
