--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/projects/">Projects &amp; stuff</a>
+            <a href="{{ site.baseurl }}/projects/">Portfolio</a>
+            <a href="{{ site.baseurl }}/shelly-porssisahko/">Shelly</a>
             <a href="https://github.com/jisotalo">GitHub</a>
             <a href="{{ site.baseurl }}/about/">About</a>
           </nav>
