--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,9 @@ html {
 
 body {
 	background: $white;
-  font: 1.2em $helvetica;
+  font: 1.1em $helvetica;
   color: $darkGray;
+  line-height: 1.2;
 }
 
 .container {
