--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,8 +15,8 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$helvetica: 'Roboto', sans-serif;
-$helveticaNeue: 'Roboto', sans-serif;
+$helvetica: Helvetica, sans-serif;
+$helveticaNeue: Helvetica, sans-serif;
 //$helvetica: Helvetica, Arial, sans-serif;
 //$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
