--- a/style.scss
+++ b/style.scss
@@ -336,6 +336,9 @@ table tr td :last-child {
   margin-bottom: 0;
 }
 
+li {
+  line-height: 1.4;
+}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
