--- a/style.scss
+++ b/style.scss
@@ -167,7 +167,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .masthead {
@@ -258,7 +258,8 @@ nav {
 //
 
 .posts>.post {
-  padding-bottom: 2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   border-bottom: 1px solid $lightGray;
 }
 
