--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ h6 {
   font-weight: bold;
 
   line-height: 1.7;
-  margin: 1em 0 15px;
+  /*margin: 1em 0 15px;*/
   padding: 0;
 
   @include mobile {
